--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,6 +13,9 @@ jobs:
       with:
         python-version: 3.11
 
+    - name: Check files
+      run: ls -l
+        
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
