--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: 3.11
 
     - name: Check files
-      run: ls -l
+      run: pwd
         
     - name: Install dependencies
       run: |
